gcc/testsuite/g++.dg/template/crash47.C
// PR c++/27102

template<typename T> void T::X::foo() {} // { dg-error "invalid" }
